--- a/index.html
+++ b/index.html
@@ -228,13 +228,16 @@ MEIO wishes to bring deliberate educational change and new perspectives to other
                         <a href="https://twitter.com/MEIOatUTSC" target="_blank"> <i class="fa fa-twitter"></i> </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/meioatutsc/" target="_blank"> <i class="fa fa-facebook"></i> </a>
+                        <a href="https://www.facebook.com/meioatuoft/" target="_blank"> <i class="fa fa-facebook"></i> </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://www.linkedin.com/company/meio-utsc/" target="_blank"> <i class="fa fa-linkedin"></i> </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="mailto:meio@utsc.utoronto.ca"> <i class="fa fa-envelope-o"></i> </a>
+                        <a href="mailto:meioatutsc@gmail.com"> <i class="fa fa-envelope-o"></i> </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.youtube.com/channel/UCWMSUDSCp_pzmuS5g_2o80w/featured"><i class="fa fa-youtube"></i> </a>
                     </li>
                 </ul>
             </div>
