Updating team members page.

--- a/team.html
+++ b/team.html
@@ -92,116 +92,167 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Exec Team 2018/2019</h2>
+                <h2 class="section-heading text-uppercase">Exec Team 2020</h2>
                 <p class="section-text">The Medical Education Initiative Organization (MEIO) could not have had a succesful year without the hard work and dedication from its executive members.</p> </div>
         </div>
         <div class="row">
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Gajathree Ananthathurai</h5>-->
+<!--                    <p class="text-muted">Co-President</p>-->
+<!--                    &lt;!&ndash; <ul class="list-inline social-buttons">-->
+<!--                        <li class="list-inline-item">-->
+<!--                            <a href="#"> <i class="fa fa-facebook"></i> </a>-->
+<!--                        </li>-->
+<!--                        <li class="list-inline-item">-->
+<!--                            <a href="#"> <i class="fa fa-twitter"></i> </a>-->
+<!--                        </li>-->
+<!--                        <li class="list-inline-item">-->
+<!--                            <a href="#"> <i class="fa fa-linkedin"></i> </a>-->
+<!--                        </li>-->
+<!--                    </ul> &ndash;&gt;-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            This commented out section is the old exec team from 2018/2019-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Senping Zhang</h5>-->
+<!--                    <p class="text-muted">Co-President</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/junaid-javed.jpg" alt="">-->
+<!--                    <h5>Kugarja Sivanesan</h5>-->
+<!--                    <p class="text-muted">Director of Research</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/tracy-amanda.jpg" alt="">-->
+<!--                    <h5>Nirushini Sivasothy</h5>-->
+<!--                    <p class="text-muted">Vice President of Research</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/gayathiri-tharmakumaran.jpg" alt="">-->
+<!--                    <h5>Vincent Teng</h5>-->
+<!--                    <p class="text-muted">Web Developer</p>-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Shelumiel Mordido</h5>-->
+<!--                    <p class="text-muted">IT Consultant</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/sasja-kadri.jpg" alt="">-->
+<!--                    <h5>Rimsha Aziz</h5>-->
+<!--                    <p class="text-muted">Director Graphic Designer</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/venuzshaa-selvanayagam.jpg" alt="">-->
+<!--                    <h5>Lavania Jeganathan</h5>-->
+<!--                    <p class="text-muted">Vice President of Marketing</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/victoria-kodytuakku.jpg" alt="">-->
+<!--                    <h5>Shauna Miah</h5>-->
+<!--                    <p class="text-muted">2nd Year Representative</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/vivian-zhou.jpg" alt="">-->
+<!--                    <h5>Yun Ho</h5>-->
+<!--                    <p class="text-muted">1st Year Representative</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Mira M</h5>-->
+<!--                    <p class="text-muted">Vice President o Event Management</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Noha Siddiqui</h5>-->
+<!--                    <p class="text-muted">Senior Editor</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Jolie Wong</h5>-->
+<!--                    <p class="text-muted">Junir Editor</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Jane Lui</h5>-->
+<!--                    <p class="text-muted">Junior Editor</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Bilal Timani</h5>-->
+<!--                    <p class="text-muted">Vice President of Communication</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-3">-->
+<!--                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">-->
+<!--                    <h5>Adrienna Tan</h5>-->
+<!--                    <p class="text-muted">Vice President of Fiance</p>-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            The new and updated team members start here.-->
             <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Gajathree Ananthathurai</h5>
-                    <p class="text-muted">Co-President</p>
-                    <!-- <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                            <a href="#"> <i class="fa fa-facebook"></i> </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#"> <i class="fa fa-twitter"></i> </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                        </li>
-                    </ul> -->
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Senping Zhang</h5>
-                    <p class="text-muted">Co-President</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/junaid-javed.jpg" alt="">
-                    <h5>Kugarja Sivanesan</h5>
-                    <p class="text-muted">Director of Research</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/tracy-amanda.jpg" alt="">
-                    <h5>Nirushini Sivasothy</h5>
-                    <p class="text-muted">Vice President of Research</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/gayathiri-tharmakumaran.jpg" alt="">
-                    <h5>Vincent Teng</h5>
-                    <p class="text-muted">Web Developer</p>
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/jolie.wong.jpg" alt="">
+                    <h5>Jolie Wong</h5>
+                    <p class="text-muted">President</p>
                 </div>
             </div>
 
             <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Shelumiel Mordido</h5>
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/adirenna.tan.JPG" alt="">
+                    <h5>Adrienna Tan</h5>
+                    <p class="text-muted">Co-President</p>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/lavaneyaa.sri.jpg" alt="">
+                    <h5>Lavaneyaa Sri</h5>
+                    <p class="text-muted">VP of Event Management</p>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/rohinn.balachandran.jpg" alt="">
+                    <h5>Rohinn Balachandran</h5>
+                    <p class="text-muted">VP of Communications</p>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/shraddha.patel.JPG" alt="">
+                    <h5>Shraddha Patel</h5>
+                    <p class="text-muted">VP logistics</p>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/michelle.kee.jpg" alt="">
+                    <h5>Michelle Kee</h5>
                     <p class="text-muted">IT Consultant</p>
                 </div>
             </div>
+
             <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/sasja-kadri.jpg" alt="">
-                    <h5>Rimsha Aziz</h5>
-                    <p class="text-muted">Director Graphic Designer</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/venuzshaa-selvanayagam.jpg" alt="">
-                    <h5>Lavania Jeganathan</h5>
-                    <p class="text-muted">Vice President of Marketing</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/victoria-kodytuakku.jpg" alt="">
-                    <h5>Shauna Miah</h5>
-                    <p class="text-muted">2nd Year Representative</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/vivian-zhou.jpg" alt="">
-                    <h5>Yun Ho</h5>
-                    <p class="text-muted">1st Year Representative</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Mira M</h5>
-                    <p class="text-muted">Vice President o Event Management</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Noha Siddiqui</h5>
-                    <p class="text-muted">Senior Editor</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Jolie Wong</h5>
-                    <p class="text-muted">Junir Editor</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Jane Lui</h5>
-                    <p class="text-muted">Junior Editor</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Bilal Timani</h5>
-                    <p class="text-muted">Vice President of Communication</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member"> <img class="mx-auto rounded-circle" src="" alt="">
-                    <h5>Adrienna Tan</h5>
-                    <p class="text-muted">Vice President of Fiance</p>
+                <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/sowmiya.wigneswaran.jpg" alt="">
+                    <h5>Sowmiya Wigneswaran</h5>
+                    <p class="text-muted">Vice President of Research</p>
                 </div>
             </div>
 
