--- a/team.html
+++ b/team.html
@@ -243,11 +243,26 @@
             </div>
 
             <div class="col-sm-3">
+              <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/samyak.jfif" alt="">
+                  <h5>Samyak Mehta</h5>
+                  <p class="text-muted">IT Consultant</p>
+              </div>
+          </div>
+
+            <div class="col-sm-3">
                 <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/michelle.kee.jpg" alt="">
                     <h5>Michelle Kee</h5>
                     <p class="text-muted">IT Consultant</p>
                 </div>
             </div>
+
+            <div class="col-sm-3">
+              <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/Sankeetha.jpeg" alt="">
+                  <h5>Sankeetha Kathir</h5>
+                  <p class="text-muted">Director of Research</p>
+              </div>
+          </div>
+
 
             <div class="col-sm-3">
                 <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/sowmiya.wigneswaran.jpg" alt="">
