--- a/research.html
+++ b/research.html
@@ -76,7 +76,16 @@
                         <h2 class="section-heading text-uppercase">The Latest</h2>
                         <p class="section-text">Research and articles curated by MEIO</p>
                     </div>
+
+                    <video controls class="col col portfolio-item">
+                        <source src="./img/research/MEIO COVID-19 Information Session.mp4" type="video/mp4">
+                    </video>
+
                     <div class="row">
+                        
+                        <!-- <video controls>
+                            <source src="./img/research/MEIO COVID-19 Information Session.mp4" type="video/mp4">
+                        </video> -->
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="articles/meducate_iseyas_nahid.html"> <i class="portfolio-link" data-toggle="modal">
                                     <div class="portfolio-hover">
