--- a/team.html
+++ b/team.html
@@ -242,12 +242,28 @@
                 </div>
             </div>
 
+
+          <div class="col-sm-3">
+            <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/David_Li.jpg" alt="">
+                <h5>David Li</h5>
+                <p class="text-muted">Vice President Of Operations</p>
+            </div>
+        </div>
+
             <div class="col-sm-3">
-              <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/samyak.jfif" alt="">
-                  <h5>Samyak Mehta</h5>
-                  <p class="text-muted">IT Consultant</p>
+              <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/Lathushikka.png" alt="">
+                  <h5>Lathushikka Canthiya</h5>
+                  <p class="text-muted">Director Of Research</p>
               </div>
           </div>
+
+          
+          <div class="col-sm-3">
+            <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/samyak.jfif" alt="">
+                <h5>Samyak Mehta</h5>
+                <p class="text-muted">IT Consultant</p>
+            </div>
+        </div>
 
             <div class="col-sm-3">
                 <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/michelle.kee.jpg" alt="">
