Fixed image issue

--- a/team.html
+++ b/team.html
@@ -259,7 +259,7 @@
 
           
           <div class="col-sm-3">
-            <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/samyak.jfif" alt="">
+            <div class="team-member"> <img class="mx-auto rounded-circle" src="img/team/samyak.jpg" alt="">
                 <h5>Samyak Mehta</h5>
                 <p class="text-muted">IT Consultant</p>
             </div>
