Changed Website Title

--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
     />
     <link rel="icon" type="image/x-icon" href="img/logos/MEIO%20Logo.jpg" />
 
-    <title>MEIO</title>
+    <title>MEIO News & Events</title>
   </head>
 
   <body id="page-top">
