changed website title

--- a/team.html
+++ b/team.html
@@ -19,7 +19,7 @@
     <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/x-icon" href="img/logos/MEIO%20Logo.jpg"/>
 
-    <title>MEIO</title>
+    <title>MEIO Executive Team</title>
 
     
 
