changed website title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     />
     <link rel="icon" type="image/x-icon" href="img/logos/MEIO%20Logo.jpg" />
 
-    <title>MEIO</title>
+    <title>Medical Education Initiative Organization (MEIO)</title>
   </head>
 
   <body id="page-top">
