Changed website title

--- a/research.html
+++ b/research.html
@@ -16,7 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/x-icon" href="img/logos/MEIO%20Logo.jpg" />
-    <title>MEIO</title>
+    <title>MEIO Research</title>
 </head>
 
 <body id="page-top">
